crates/api-snowflake-rest/src/tests/snapshots/known_issues/select_from_missing_db.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_api.rs
description: "SQL #1 [spent: 195/195ms]: select * from missing_db.foo.foo\nQuery UUID: ccac994d-a508-4cb1-b2c2-3a7a1d09076a"
expression: snapshot
---
select * from missing_db.foo.foo
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: table 'missing_db.foo.foo' not found",
  "code": "002003"
}
