crates/api-snowflake-rest/src/tests/snapshots/known_issues/select_from_missing_schema.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_api.rs
description: "SQL #1 [spent: 179/179ms]: select * from missing_schema.foo\nQuery UUID: 72df74d7-3b28-4bfd-b78a-7f3105a44f2f"
expression: snapshot
---
select * from missing_schema.foo
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: table 'embucket.missing_schema.foo' not found",
  "code": "002003"
}
