crates/api-snowflake-rest/src/tests/snapshots/known_issues/select_from_missing_table.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_api.rs
description: "SQL #1 [spent: 167/167ms]: select * from missing_table\nQuery UUID: 78fd0abb-515d-4b75-bb50-0b5f742ce6fe"
expression: snapshot
---
select * from missing_table
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: table 'embucket.public.missing_table' not found",
  "code": "002003"
}
